--- a/index.html
+++ b/index.html
@@ -3,10 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio Web</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Mi blog</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/font/flaticon.css">
 </head>
-<body>
-    
+<body class="home-body">
+    <header>
+        <section class="header-icons-container">
+            <a href=""><span class="flaticon-001-facebook"></span></a>
+            <a href=""><span class="flaticon-002-twitter"></span></a>
+            <a href=""><span class="flaticon-011-instagram"></span></a>
+            <a href=""><span class="flaticon-010-linkedin"></span></a>
+            <a href=""><span class="flaticon-008-youtube"></span></a>
+        </section>
+        <nav>
+            <section class="nav-logo-container">
+                <a href="/"><img src="assets/img/Logo-negro.png" alt="Logo de mi blog"></a>
+            </section>
+            <section class="nav-link-container">
+                <a href="perfil.html">Sobre mí</a>
+            </section>
+        </nav>
+    </header>
+    <main class="main-home">
+        <p class="main-home-text">Conoce las novedades <br>y noticias del mundo tech</p>
+        <button class="main-home-button"><a href="blogs.html">Entra ya!</a></button>
+    </main>
 </body>
 </html>
