--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 <body class="home-body">
     <header>
         <section class="header-icons-container">
-            <a href=""><span class="flaticon-001-facebook"></span></a>
-            <a href=""><span class="flaticon-002-twitter"></span></a>
-            <a href=""><span class="flaticon-011-instagram"></span></a>
             <a href=""><span class="flaticon-010-linkedin"></span></a>
-            <a href=""><span class="flaticon-008-youtube"></span></a>
+            <a href=""><span class="flaticon-001-facebook"></span></a>
+            <a href=""><span class="flaticon-003-whatsapp"></span></a>
+            <a href=""><span class="flaticon-011-instagram"></span></a>
         </section>
         <nav>
             <section class="nav-logo-container">
-                <a href="/"><img src="assets/img/Logo-negro.png" alt="Logo de mi blog"></a>
+                <a href="/">Mi portafolio Web</a>
             </section>
             <section class="nav-link-container">
                 <a href="perfil.html">Sobre mí</a>
