Primeros cambios a mi portafolio

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <main class="main-home">
-        <p class="main-home-text">Conoce las novedades <br>y noticias del mundo tech</p>
+        <p class="main-home-text">HI THERE <br>I'M LUIS GONZALEZ <br>FRONTED WEB DEVELOPER</p>
         <button class="main-home-button"><a href="blogs.html">Entra ya!</a></button>
     </main>
 </body>
