--- a/perfil.html
+++ b/perfil.html
@@ -28,11 +28,10 @@
     <main class="perfil-main">
         <section class="perfil-info-container">
             <div class="grid-container info-container-grid">
-                <img src="assets/img/profile-pic.jpg" alt="Imagen de perfil">
+                <img src="assets/img/profile-picture.jpeg" alt="Imagen de perfil">
                 <div class="perfil-info">
                     <h1>Hola!</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga similique incidunt excepturi officia totam accusamus dolor perspiciatis iusto quisquam labore! Facere eius quibusdam laboriosam debitis accusamus iusto, vero possimus beatae?
-                    Nisi voluptatum praesentium soluta dolorum aperiam incidunt assumenda molestiae adipisci. Nisi ipsa veniam modi rerum animi enim ut neque molestias rem, dignissimos expedita ea, harum nulla optio consequatur dolores odio!</p>
+                    <p>Mi nombre es Luis Manuel González Rodríguez, actualmente tengo 22 años. Nací en el estado de Michoacán, México en el año 2001. <br>Me encuentro formando mi educación profesional dentro de la Universidad de Guadalajara, entre a la carrera de ingeniera de computación en el año 2019. Me sumergí en el mundo del desarrollo web en el año 2022 y hasta la fecha no he parado de aprender nuevas cosas y practicar cada día para ser mejor. <br>Este portafolio lo estoy creando con mucho cariño, ya que es una de mis primeros proyectos donde aplico los conocimiento obtenidos hasta al momento</p>
                 </div>
             </div>
         </section>
